@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <gresources>
   <gresource prefix="/org/trychlos/openbook/recurrent">
-    <file>ofa-recurrent-manage-page.ui</file>
     <file>ofa-recurrent-model-properties.ui</file>
     <file>ofa-recurrent-new.ui</file>
     <file>ofa-recurrent-run-page.ui</file>
